test/libyul/yulSyntaxTests/dot_trailing_function_arg.yul
{
    function x(a.) {}
}
// ----
// TypeError 3384: (17-19): "a." is not a valid identifier (ends with a dot).
